add changeUsername & fix uploadProfilePicture
